changed images and fixed spacing

--- a/style.css
+++ b/style.css
@@ -102,8 +102,6 @@ font-size: 1.25em;
 a{
     text-decoration: none;
 }
-.classname:hover{color:#aaa;}
-
 
 @media (max-width: 1200px){
 html{
@@ -123,7 +121,7 @@ html{
     }
 }
 #contact {
-    background-color: var(--brickred);
+    background-color: var(--red);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -131,14 +129,30 @@ html{
     align-items: center;
     height: 60vh;
 }
-.contact-links:hover{
 
+.contact-links > a{
+    color:var(--darkgray);
+    font-size: 1.5rem;
+}
+#contact-header1{
+    font-size: 3rem;
+}
+#contact-header2{
+    color:var(--white);
+    font-size:1.5rem;
+    padding:10px;
+}
+.contact-details{
+margin:10px;
 }
 
 
+
 footer{
-    background-color: var(--red);
+color:var(--white);
+background-color: var(--darkgray);
   display: flex;
   justify-content: space-evenly;
   align-items:center;
+  height:5vh;
 }
